# blazingdb-toolchain

./: .gitignore  CMakeLists.txt  README.md  conda-build-docker.sh  conda_build_one.jenkinsfile
ci/cpu/: build.sh  upload_anaconda.sh
ci/cpu/bsql-rapids-thirdparty/: conda-build.sh
ci/cpu/bsql-spdlog/: conda-build.sh
ci/cpu/bsql-toolchain/: conda-build.sh
ci/cpu/bsql-toolchain-aws/: conda-build.sh
ci/cpu/bsql-toolchain-gcp/: conda-build.sh
ci/cpu/toolchain/: conda-build.sh
ci/cpu/toolchain-aws/: conda-build.sh
ci/cpu/toolchain-gcp/: conda-build.sh
cmake/: AWSSDKCPP.CMakeLists.txt.cmake  Arrow.CMakeLists.txt.cmake  BlazingDBCommunication.CMakeLists.txt.cmake  BlazingDBIO.CMakeLists.txt.cmake  BlazingDBProtocol.CMakeLists.txt.cmake  Boost.CMakeLists.txt.cmake  Brotli.CMakeLists.txt.cmake  ConfigureAWSSDK.cmake  ConfigureArrow.cmake  ConfigureBlazingDBCommunication.cmake  ConfigureBlazingDBDependencies.cmake  ConfigureBlazingDBHostCompiler.cmake  ConfigureBlazingDBIO.cmake  ConfigureBlazingDBProtocol.cmake  ConfigureBoost.cmake  ConfigureBrotli.cmake  ConfigureCUDA.cmake  ConfigureFlatBuffers.cmake  ConfigureGDR.cmake  ConfigureGoogleBenchmark.cmake  ConfigureGoogleCloudCPP.cmake  ConfigureGoogleTest.cmake  ConfigureHostCompiler.cmake  ConfigureJitify.cmake  ConfigureLibGDF.cmake  ConfigureLz4.cmake  ConfigureNVStrings.cmake  ConfigurePython3.cmake  ConfigureRMM.cmake  ConfigureRapidJSON.cmake  ConfigureSimpleWebServer.cmake  ConfigureSnappy.cmake  ConfigureThrift.cmake  ConfigureUCX.cmake  ConfigureZSTD.cmake  Configurespdlog.cmake  DefineVersions.cmake  FindBlazingDBCommunication.cmake  FindBlazingDBIO.cmake  FindBlazingDBProtocol.cmake  (+25 more)
cmake/RapidJSON/: RapidJSONConfig.cmake
conda/recipes/blazingdb-toolchain/: meta.yaml
conda/recipes/blazingsql-toolchain/: meta.yaml
conda/recipes/blazingsql-toolchain-aws-cpp/: build.sh  meta.yaml
conda/recipes/blazingsql-toolchain-gcp-cpp/: build.sh  meta.yaml
conda/recipes/bsql-rapids-thirdparty/: build.sh  meta.yaml
conda/recipes/bsql-spdlog/: build.sh  meta.yaml
conda/recipes/bsql-toolchain/: meta.yaml
conda/recipes/bsql-toolchain-aws-cpp/: build.sh  meta.yaml
conda/recipes/bsql-toolchain-gcp-cpp/: meta.yaml
include/: blazingdb_dependencies.h.cmake
patches/aws-sdk-cpp-patch/: CMakeLists.txt
patches/aws-sdk-cpp-patch/cmake/platform/: linux.cmake
patches/spdlog-patch/include_spdlog_fmt_bundled/: core.h
scripts/: AWS_BUILD_PATCH_build_external.cmake  build-google-cloud-cpp.sh  build-spdlog.sh  patch_nvstrings.sh
scripts/aws-sdk-cpp-patch/: build_external.cmake
